test/simple/correct/PMC12.hs
module PMC12 where

main :: Int
main = 0

a :: Char -> Int
a 'x' = 3
a 'y' = 4
a z = 5