test/simple/typeerrors/Examples/TooGenBug.hs
f :: a -> Int
f x = length x

g :: Bool -> Int
g = f
